--- a/giftlink-frontend/public/static/home.css
+++ b/giftlink-frontend/public/static/home.css
@@ -1,19 +1,51 @@
 /* Task 1: Style the body */
 body {
-    /* insert code here */
+    font-family:'Montserrat', sans-serif;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    background-color: #f4f4f4;
 }
 
 /* Task 2: Create a pseudo-element for the background and blur */
 body::before {
-    /* insert code here */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: "background-colors.jpg";
+    filter: blur(8px);
 }
 
 /* Task 3: Style the content area */
 .content {
     /* insert code here */
+    position: relative;
+    z-index: 100;
+    align-content: center;
+    color:aliceblue;
+    max-width: fit-content;
+    padding: 10%;
+    background: fixed;
 }
 
 /* Task 4: Add styles for headings, paragraphs, and buttons */
-h1, h2, .lead, .btn-primary {
-    /* insert code here */
+h1, h2  {
+    max-width: fit-content;
+}
+
+.lead {
+    font-size: larger;
+    font-style: italic;
+    max-width: fit-content;
+}
+
+.btn-primary{
+    max-width: fit-content;
+    text-align: center;
+    padding: 15px 15px;
 }
