--- a/giftlink-frontend/public/static/home.css
+++ b/giftlink-frontend/public/static/home.css
@@ -6,6 +6,7 @@ body {
     height: 100vh;
     display: flex;
     align-items: center;
+    justify-content: center;
     overflow: hidden;
     background-color: #f4f4f4;
 }
@@ -17,8 +18,10 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: "background-colors.jpg";
+    background-image: url('static/background-colors.jpg');
+    background-size: cover;
     filter: blur(8px);
+    z-index: -1; 
 }
 
 /* Task 3: Style the content area */
@@ -35,7 +38,7 @@ body::before {
 
 /* Task 4: Add styles for headings, paragraphs, and buttons */
 h1, h2  {
-    max-width: fit-content;
+    text-align: center;
 }
 
 .lead {
@@ -46,6 +49,7 @@ h1, h2  {
 
 .btn-primary{
     max-width: fit-content;
+    font-size: larger;
     text-align: center;
     padding: 15px 15px;
 }
